Add support for the 'Present' extension. [v3]
This makes updating the eyes nicely vblank synchronized.

v2:
	Ensure extensions exist before calling query_version

	These calls add calls to xcb_get_extension_data before calling
	query_version calls, as those calls will mark the connection
	with an error if made against an X server without the
	extension present.

	Suggested-by: Uli Schlachter <psychon@znc.in>

v3:
	check the 'present' field in the return from
	xcb_get_extension_data; the xcb_get_extension_data call will
	always succeed (save for out of memory), the only way to tell
	if the extension is supported in the target X server is to
	test the 'present' field in the query extension reply value.

Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,12 @@ if test x$use_xrender != xno ; then
 	AC_DEFINE([XRENDER],1,[Define to use X Render Extension])
 fi
 
+AC_ARG_WITH(present, AS_HELP_STRING([--with-present],[Use Present for updates (Default is AUTO)]),use_present="$withval",use_present="try")
+if test x$use_present != xno ; then
+	PKG_CHECK_MODULES(PRESENT, [x11-xcb xcb-present >= 1.9 xcb-xfixes xcb-damage])
+	AC_DEFINE([PRESENT],1,[Define to use X Present Extension])
+fi
+
 AC_CONFIG_FILES([
 	Makefile
 	man/Makefile])
